--- a/credit-conveyor-ms/src/main/resources/application.properties
+++ b/credit-conveyor-ms/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 logging.file.name=application.log
 logging.file.path=/
 
+springdoc.swagger-ui.path=/swagger-ui.html
+
 standardRate=24
 insuranceCost=10000
 insurance_enabled=2
