--- a/credit-conveyor-ms/pom.xml
+++ b/credit-conveyor-ms/pom.xml
@@ -62,7 +62,11 @@
             <version>1.9.7</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.8</version>
+        </dependency>
     </dependencies>
 
     <build>
