Вынесены в properties значения из метода scoring. Доделана валидация и из контроллера убраны BindingResult. Метод scoring разделен на scoring и checkRestrictions. Заменены множество аннотаций на @Data. Добавлена возможность отключения логирования через файл application.properties. Исправлено логирование методов контроллера. Значения из application.properties вынесены в отдельный класс RateProperties. Метод calculateRateByInsuranceAndSalary заменен на CalculateBaseRate. Исправлена ошибка с тестированием. Добавил поле debtPayment в PaymentScheduleElement. Упорядочены методы Create4Offers и getPaymentSchedule.

--- a/credit-conveyor-ms/src/main/resources/application.properties
+++ b/credit-conveyor-ms/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 logging.file.name=application.log
 logging.file.path=/
 
+spring.profiles.active=logs
+
 springdoc.swagger-ui.path=/swagger-ui.html
 
-standardRate=24
 insuranceCost=10000
-insurance_enabled=2
-salary_client=3
+standardRate=24
+insurance_enabled=-2
+salaryClient=-3
+employed=1
+businessOwner=3
+midManager=-2
+topManager=-4
+married=-3
+divorced=1
+dependentAmount=1
+middleAge=-3
+nonBinary=3
