Убрал кириллицу в названии метода. Сделал все названия properties в одном стиле. Отрефакторил метод Create4Offers. Убрал самописный обработчик ошибки(дефолтный работает также). Убрана аннотация @Validated из класса LoanApplicationRequestDTO.

--- a/credit-conveyor-ms/src/main/resources/application.properties
+++ b/credit-conveyor-ms/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 logging.file.name=application.log
 logging.file.path=/
 
+#logging.level.org.springframework.web=TRACE
+
 spring.profiles.active=logs
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
 insuranceCost=10000
 standardRate=24
-insurance_enabled=-2
+insuranceEnabled=-2
 salaryClient=-3
 employed=1
 businessOwner=3
