CreditConveyorService был разбит на OfferService, ScoringService и ScreditService. Сделано логирование http запросов и ответов через logbook. Properties теперь определяются через @PropertiesConfiguration. Самописный логер пока не работает:).

--- a/credit-conveyor-ms/src/main/resources/application.properties
+++ b/credit-conveyor-ms/src/main/resources/application.properties
@@ -2,21 +2,22 @@ logging.file.name=application.log
 logging.file.path=/
 
 #logging.level.org.springframework.web=TRACE
+#logging.level.org.zalando.logbook=TRACE
 
 spring.profiles.active=logs
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
-insuranceCost=10000
-standardRate=24
-insuranceEnabled=-2
-salaryClient=-3
-employed=1
-businessOwner=3
-midManager=-2
-topManager=-4
-married=-3
-divorced=1
-dependentAmount=1
-middleAge=-3
-nonBinary=3
+rate.insuranceCost=10000
+rate.standardRate=24
+rate.insuranceEnabled=-2
+rate.salaryClient=-3
+rate.employed=1
+rate.businessOwner=3
+rate.midManager=-2
+rate.topManager=-4
+rate.married=-3
+rate.divorced=1
+rate.dependentAmount=1
+rate.middleAge=-3
+rate.nonBinary=3
