--- a/credit-conveyor-ms/src/test/resources/application.properties
+++ b/credit-conveyor-ms/src/test/resources/application.properties
@@ -1,13 +1,13 @@
-insuranceCost=10000
-standardRate=24
-insurance_enabled=-2
-salaryClient=-3
-employed=1
-businessOwner=3
-midManager=-2
-topManager=-4
-married=-3
-divorced=1
-dependentAmount=1
-middleAge=-3
-nonBinary=3
+rate.insuranceCost=10000
+rate.standardRate=24
+rate.insuranceEnabled=-2
+rate.salaryClient=-3
+rate.employed=1
+rate.businessOwner=3
+rate.midManager=-2
+rate.topManager=-4
+rate.married=-3
+rate.divorced=1
+rate.dependentAmount=1
+rate.middleAge=-3
+rate.nonBinary=3
