Сделаны интерфейсы для все сервисов. В классе ScoringServiceImpl сделано логирование с помощью обычного логера. В классе OfferService метод createFourOffers переименован в createOffers и из него убрано приведение типов. В классе CreditService вынесен рачет interestPayment в отдельный метод. В классе CreditService вынесен рачет psk в отдельный метод. В классе CreditService убран неиспользующийся OfficeService. Метод scoring в ScoringService тепрь возвращает не Optional, а BigDecimal. Из запросы к сваггеру больше не логируются. Пакет httpLogging переименован в filter. В классе CreditConveyorServiceExceptionHandler из сигнатуры метода CreditConveyorServiceExceptionHandler убран WebRequest.

--- a/credit-conveyor-ms/src/main/resources/application.properties
+++ b/credit-conveyor-ms/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.file.name=application.log
 logging.file.path=/
 
-spring.profiles.active=logs
+spring.profiles.active=http_logs
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
