Убран лог из ScoringServiceImpl.scoring перед return true; В методах севисов добавлены новые логи и уровень всех их изменен на DEBUG, изменил способ их создания. Логгер добавляется теперь с помощью аннотации ломбок. В CreditConveyorServiceExceptionHandler.handleValidationExceptions ResponseEntity собирается с помощью статических методов. Http запросы логируются с полным URL. Проверка на логирование в фильтре вынесена в отдельный метод. Адреса, котрые не нужно логировать записаны в файле и доступны через HttpProperties. Профайл из фильтра убран.

--- a/credit-conveyor-ms/src/main/resources/application.properties
+++ b/credit-conveyor-ms/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 logging.file.name=application.log
 logging.file.path=/
 
-spring.profiles.active=http_logs
+#spring.profiles.active=
 
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.path=/swagger
 
 rate.insuranceCost=10000
 rate.standardRate=24
@@ -18,3 +18,6 @@ rate.divorced=1
 rate.dependentAmount=1
 rate.middleAge=-3
 rate.nonBinary=3
+
+not.log.apiDocs=api-docs
+not.log.swagger=swagger
