Изменил префикс в HttpProperties и заменил поля оттуда на 1 лист. Логгер в RequestResponseLoggingFilter добавляется теперь с помощью аннотации. Вынес логику логгирования в отдельный класс, добавил класс HttpMessage, для записи http сообщний. в CreditServiceImpl сделал константы статическими. Убрал модификаторы доступа из интерфейсов и переместил их реализацию в пакет ServiceImpl. Добавил логгированиел результата подсчета PSK. Сделал примитивами isSalaryClient, isInsuranceEnabled в ScoringService. В ScoringServiceImpl.getAge убрал String.format из создания лога.

--- a/credit-conveyor-ms/src/main/resources/application.properties
+++ b/credit-conveyor-ms/src/main/resources/application.properties
@@ -19,5 +19,4 @@ rate.dependentAmount=1
 rate.middleAge=-3
 rate.nonBinary=3
 
-not.log.apiDocs=api-docs
-not.log.swagger=swagger
+http.excludeUrls=swagger,api-docs,favicon
