--- a/deal-ms/src/main/resources/application.properties
+++ b/deal-ms/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/credit_conveyor_db?useSSL=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/liquibase_example?useSSL=false
 spring.datasource.username=postgres
 spring.datasource.password=10
 spring.jpa.show-sql=true
@@ -8,3 +8,4 @@ server.port=8081
 
 http.excludeUrls=swagger,api-docs,favicon
 
+spring.liquibase.change-log=db/changelog/db.changelog-master.xml
