Попытка прикрутить kafka и общение с ней в deal-ms

--- a/deal-ms/src/main/resources/application.properties
+++ b/deal-ms/src/main/resources/application.properties
@@ -6,6 +6,18 @@ spring.jpa.show-sql=true
 
 server.port=8081
 
+spring.liquibase.change-log=db/changelog/db.changelog-master.xml
+
 http.excludeUrls=swagger,api-docs,favicon
 
-spring.liquibase.change-log=db/changelog/db.changelog-master.xml
+
+kafka.producer.bootstrapAddress = localhost:29092
+kafka.producer.groupId = deal-ms
+
+kafka.topic.finishRegistration = finish-registration
+kafka.topic.createDocuments = create-documents
+kafka.topic.sendDocuments = send-documents
+kafka.topic.sendSes = send-ses
+kafka.topic.creditIssued = credit-issued
+kafka.topic.applicationDenied = application-denied
+
