--- a/dossier/src/main/resources/application.properties
+++ b/dossier/src/main/resources/application.properties
@@ -17,3 +17,16 @@ kafka.topic.sendDocuments = send-documents
 kafka.topic.sendSes = send-ses
 kafka.topic.creditIssued = credit-issued
 kafka.topic.applicationDenied = application-denied
+
+mail.message.text.finishRegistrationSubject =Complete the loan
+mail.message.text.finishRegistrationMessage = "Link to complete"
+mail.message.text.createDocumentsSubject = Confirm the start of paperwork
+mail.message.text.createDocumentsMessage = "Link to confirmation of registration of documents"
+mail.message.text.sendDocumentsSubject = Your documents are completed
+mail.message.text.sendDocumentsMessage = Dear $firstName $lastName, the documents for your loan in the amount of the $loanAmount are completed and ready for your signature. Click on the following link to sign them: "Signing Link"
+mail.message.text.sendSesSubject = Sign your documents
+mail.message.text.sendSesMessage = Sign your documents with this code: 
+mail.message.text.creditIssuedSubject = Loan successfully issued!
+mail.message.text.creditIssuedMessage = Loan successfully issued! Thank you for choosing us.
+mail.message.text.applicationDeniedSubject = Your loan has been declined
+mail.message.text.applicationDeniedMessage = Your loan has been declined.
