--- a/deal-ms/src/main/resources/application.properties
+++ b/deal-ms/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/liquibase_example?useSSL=false
-spring.datasource.username=postgres
+spring.datasource.username=max
 spring.datasource.password=10
 spring.jpa.show-sql=true
 
